# jpeg-encoder

./: .gitignore  Cargo.toml  README.md  jest.config.js  jest.setup.js  package.json
.github/workflows/: deploy-pages.yml  wasm-bindgen.yml
docs/: README.md  app.js  index.html
examples/: README.md  encode.js
pkg/: README.md  example-web.html  example.js  index.d.ts  index.js  jpeg_encoder.d.ts  jpeg_encoder.js  jpeg_encoder_bg.js  jpeg_encoder_bg.wasm  jpeg_encoder_bg.wasm.d.ts
pkg/cjs/: index.cjs  index.d.ts  jpeg_encoder.js  jpeg_encoder_bg.wasm  jpeg_encoder_bg.wasm.d.ts
pkg/esm/: index.d.ts  index.js  jpeg_encoder.d.ts
scripts/: build-bindings.js
src/: encoder.rs  lib.rs  wasm.rs  writer.rs
test/: browser.test.js  integration-cjs.test.cjs  integration.test.js  type-check.ts  verify-enum-values.js
wasm-bindings/: Cargo.toml
wasm-bindings/src/: lib.rs
