[package]
name = "jpeg-encoder"
version = "0.6.1"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "(MIT OR Apache-2.0) AND IJG"
description = "JPEG encoder"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "encoder", "image"]
readme = "README.md"
repository = "https://github.com/vstroebel/jpeg-encoder"
rust-version = "1.61"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
simd = ["std"]
std = []
wasm-bindgen = ["dep:wasm-bindgen", "dep:js-sys", "dep:wee_alloc"]

# DO NOT USE THIS IN PRODUCTION. Expose several internal functions for benchmark purposes.
benchmark = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
jpeg-decoder = { version = "0.3", default-features = false }

[profile.dev]
opt-level = 1
